Fixed packaging for now

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,12 +19,11 @@ packages =
    NumPy2048
 install_requires =
    numpy>=1.19
-   windows-curses>=2.0;platform_system=='Windows'
+   windows-curses>=2.0;platform_system=="Windows"
 python_requires = >=3.6
 package_dir =
     =src
 zip_safe = no
-include_package_data = True
 
 [options.extras_require]
 testing =
@@ -36,6 +35,9 @@ testing =
 
 [options.package_data]
 NumPy2048 = py.typed
+
+[options.packages.find]
+where=src
 
 [flake8]
 max-line-length = 80
