--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,8 +3,10 @@ name: Tests
 on:
   push:
     paths-ignore:
-      -'**.md'
-  - pull_request
+      - '**.md'
+  pull_request:
+    paths-ignore:
+      - '**.md'
 
 jobs:
   test:
