Attempting to fix packaging

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,8 @@ python_requires = >=3.6
 package_dir =
     =src
 zip_safe = no
+include_package_data=True
+package_data={'NumPy2048': ['assets/2048.txt']},
 
 [options.extras_require]
 testing =
