--- a/setup.cfg
+++ b/setup.cfg
@@ -24,8 +24,10 @@ python_requires = >=3.6
 package_dir =
     =src
 zip_safe = no
-include_package_data=True
-package_data={'NumPy2048': ['assets/2048.txt']},
+include_package_data = True
+
+[options.package_data]
+* = *.txt
 
 [options.extras_require]
 testing =
@@ -34,9 +36,6 @@ testing =
     mypy>=0.910
     flake8>=3.9
     tox>=3.24
-
-[options.package_data]
-NumPy2048 = py.typed
 
 [options.packages.find]
 where=src
