Still trying to fix packaging

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ zip_safe = no
 include_package_data = True
 
 [options.package_data]
-* = *.txt
+* = assets/*.txt
 
 [options.extras_require]
 testing =
