Updated main-script and setup config

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,5 +40,9 @@ testing =
 [options.packages.find]
 where=src
 
+[options.entry_points]
+console_scripts =
+    cli-2048 = NumPy2048.main:terminal_2048
+
 [flake8]
 max-line-length = 80
